--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "@vercel/analytics": "^1.5.0",
     "axios": "^1.11.0",
     "dotenv": "^17.2.1",
     "jotai": "^2.12.5",
